--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <a href="atividade9_MariaCorrea.html">atividade9_MariaCorrea</a><br>
 <a href="atividade10_MariaCorrea.html">atividade10_MariaCorrea</a><br>
 <a href="atividade11_MariaCorrea.html">atividade11_MariaCorrea</a><br>
+<a href="atividade13_MariaCorrea.html">atividade9_MariaCorrea</a><br>
 <a href="atividade16_MariaCorrea.html">atividade16_MariaCorrea</a><br>
+<a href="atividade17_MariaCorrea.html">atividade9_MariaCorrea</a><br>
 <a href="atividade31_MariaCorrea.html">atividade31_MariaCorrea</a><br>
+<a href="atividade46_MariaCorrea.html">atividade9_MariaCorrea</a><br>
 <a href="atividade50_MariaCorrea.html">atividade50_MariaCorrea</a><br>
